# inference-client

./: .gitignore  README.md
cpp/: CMakeLists.txt  serving_client.cc
cpp/protos/: types.proto
golang/: README.md  client.go
golang/protos/: resource_handle.proto
java/: README.md
java/src/main/java/com/didiyun/eis/: MnistClientDemo.java
java/src/main/proto/: tensor.proto  tensor_shape.proto
python/: inception.py  mnist.py  requirements.txt  requirements_py3.txt
pytorch-client/: README.md
pytorch-client/cpp/: CMakeLists.txt  README.md  pytorch_serving_client.cc
pytorch-client/golang/: README.md  build-protoc.sh  client.go
pytorch-client/java/: README.md  pom.xml
pytorch-client/java/src/main/java/com/didiyun/eis/: ResnetClientDemo.java
pytorch-client/java/src/main/proto/: caffe2_service.proto
pytorch-client/python/: requirements.txt  resnet_demo.py  utils.py
tensorflow-client/cpp/: CMakeLists.txt  README.md  tf_serving_client.cc
tensorflow-client/golang/: README.md  build-protoc.sh  client.go
tensorflow-client/golang/protos/: model.proto
tensorflow-client/java/: README.md  pom.xml
tensorflow-client/java/src/main/java/com/didiyun/eis/: MnistClientDemo.java
tensorflow-client/protos/: predict.proto
tensorflow-client/python/: build-protoc.sh  inception.py  mnist.py  requirements.txt  requirements_py3.txt  resnet.py
tensorflow-client/python/tf_utils/: dtypes.py  fast_tensor_util.pyx  tensor_shape.py  tensor_util.py
tools/model-check/: README.md  model_check.py
tools/model-check/core/: checker.py  getter.py  util.py
tools/model-convert/: readme.md
tools/model-convert/pytorch-tools/: convert_to_script_model.py
tools/model-convert/tf-tools/: ckpt_convert_saved_model.py  ckpt_model_show_all_ops.py  frozen_pb_to_saved_model.py  saved_model_gen_tensorboard_log.py  saved_model_load_test.py
